Replace symlink with actual .tmux.conf file

--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -18,7 +18,7 @@ set -g status-style 'bg=#1a1a1a fg=#a8a8a8'
 set -g status-left-length 30
 set -g status-left '#[fg=#d0d0d0,bg=#303030] #S #[default]'
 set -g status-right-length 150
-set -g status-right "#[fg=#a8a8a8]#($HOME/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 1) #[fg=#404040]#($HOME/.config/tmux/scripts/status-info.sh) #[fg=#a8a8a8]%d/%m/%Y %H:%M"
+set -g status-right "#[fg=#a8a8a8]#($HOME/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 1 --colors) #[fg=#a8a8a8] %H:%M"
 
 setw -g window-status-format ' #I:#W '
 setw -g window-status-current-format ' #I:#W '
