Restore .tmux.conf file and fix symlink structure

--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -1,1 +1,71 @@
-/home/rcorreia/.config/tmux/.tmux.conf
+set -g default-terminal "screen-256color"
+set -g escape-time 0
+set -g focus-events on
+set -g history-limit 10000
+
+set -g prefix C-a
+set -g prefix2 C-b
+bind C-a send-prefix -2
+
+set -g base-index 1
+setw -g pane-base-index 1
+set -g renumber-windows on
+set -g set-titles on
+
+set -g status-interval 1
+set -g status-justify left
+set -g status-style 'bg=#1a1a1a fg=#a8a8a8'
+set -g status-left-length 30
+set -g status-left '#[fg=#d0d0d0,bg=#303030] #S #[default]'
+set -g status-right-length 150
+set -g status-right "#[fg=#a8a8a8]#($HOME/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 1 --colors) #[fg=#a8a8a8] %H:%M"
+
+setw -g window-status-format ' #I:#W '
+setw -g window-status-current-format ' #I:#W '
+setw -g window-status-current-style 'bg=#404040 fg=#d0d0d0'
+setw -g window-status-activity-style 'fg=#b0b0b0'
+setw -g window-status-bell-style 'fg=#c06060'
+
+set -g pane-border-style 'fg=#303030'
+set -g pane-active-border-style 'fg=#505050'
+
+set -g message-style 'fg=#1a1a1a bg=#b0b0b0'
+
+set -g mouse on
+
+unbind C-b
+bind C-b send-prefix
+
+bind r source-file ~/.tmux.conf \; display "Config reloaded"
+bind ? list-keys -T "Keybindings"
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+bind | split-window -h
+bind - split-window -v
+
+bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
+
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-dir "$HOME/.tmux/resurrect"
+set -g @tmux_plugin_manager_path "$HOME/.tmux/plugins"
+
+run '~/.tmux/plugins/tpm/tpm'
