feat(tmux): add keylocker plugin and enhance config with friendly session names
- Add tmux-keylocker plugin for locking keybindings (Ctrl+g to toggle)
- Add tmux-nerd-font-window-name plugin with config
- Enhance status bar with lock/unlock indicator
- Add random friendly session name generator in init.sh
- Reorganize tmux.conf with section headers for better readability

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,71 +1,120 @@
+# ============================================================================
+# Terminal & General Settings
+# ============================================================================
 set -g default-terminal "screen-256color"
 set -g escape-time 0
 set -g focus-events on
 set -g history-limit 10000
 
+# ============================================================================
+# Prefix Key Bindings
+# ============================================================================
 set -g prefix C-a
 set -g prefix2 C-b
 bind C-a send-prefix -2
 
+unbind C-b
+bind C-b send-prefix
+
+# ============================================================================
+# Window & Pane Indexing
+# ============================================================================
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
 set -g set-titles on
 
+# ============================================================================
+# Status Bar Configuration
+# ============================================================================
 set -g status-interval 1
 set -g status-justify left
 set -g status-style 'bg=#1a1a1a fg=#a8a8a8'
 set -g status-left-length 30
 set -g status-left '#[fg=#d0d0d0,bg=#303030] #S #[default]'
 set -g status-right-length 150
-set -g status-right "#[fg=#a8a8a8]#($HOME/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 1 --colors) #[fg=#a8a8a8] %H:%M"
 
+# CPU/Memory monitor (no colors - matches theme)
+# Lock status indicator: UNLOCKED (subtle green) / LOCKED (muted red)
+set -g status-right "#[fg=#a8a8a8]#($HOME/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 1) #[fg=#a8a8a8] %H:%M #[default]#{?@keylocker-status,#[fg=#e0e0e0]#[bg=#706060] LOCKED ,#[fg=#e0e0e0]#[bg=#607060] UNLOCKED }"
+
+# Window status styling
 setw -g window-status-format ' #I:#W '
 setw -g window-status-current-format ' #I:#W '
 setw -g window-status-current-style 'bg=#404040 fg=#d0d0d0'
 setw -g window-status-activity-style 'fg=#b0b0b0'
 setw -g window-status-bell-style 'fg=#c06060'
 
+# Pane borders
 set -g pane-border-style 'fg=#303030'
 set -g pane-active-border-style 'fg=#505050'
 
+# Message styling
 set -g message-style 'fg=#1a1a1a bg=#b0b0b0'
 
+# ============================================================================
+# Mouse Support
+# ============================================================================
 set -g mouse on
 
-unbind C-b
-bind C-b send-prefix
+# ============================================================================
+# Keybindings
+# ============================================================================
 
-bind r source-file ~/.tmux.conf \; display "Config reloaded"
+# Reload config
+bind r source-file ~/.dotfiles/config/tmux/tmux.conf \; display "Config reloaded"
 bind ? list-keys -T "Keybindings"
 
+# Pane navigation (vim-style)
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# Pane resizing
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# Split panes
 bind | split-window -h
 bind - split-window -v
 
+# Clear screen and history
 bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
 
+# Copy mode (vi-style)
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
+# ============================================================================
+# Plugins (TPM)
+# ============================================================================
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'TheSast/tmux-keylocker'
 
+# ============================================================================
+# Plugin Configuration
+# ============================================================================
+
+# tmux-resurrect settings
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-dir "$HOME/.tmux/resurrect"
+
+# tmux-keylocker settings - use Ctrl+g to toggle bindings (matches zellij)
+set -g @keylocker-toggle-bind 'C-g'
+set -g @keylocker-lock-bind 'None'
+set -g @keylocker-unlock-bind 'None'
+
+# TPM plugin manager path
 set -g @tmux_plugin_manager_path "$HOME/.tmux/plugins"
 
+# Initialize TPM (keep this at the bottom)
 run '~/.tmux/plugins/tpm/tpm'
