refactor: major dotfiles cleanup and improvements
- Extract zimfw to plugin (config/plugins/zimfw/)
- Add centralized paths (config/paths.sh)
- Reorganize init.sh with 5 clear sections
- Add dot_status() and fix dot_reload()
- Flatten arch plugin (plugins/arch/ instead of plugins/os/arch/)
- Add consistent installers with --dry-run support
- Slim down macOS and Windows packages to match Arch essentials
- Fix all naming conventions (__dot_*, dot_*, _plugin_*)
- Add lint exclusions for third-party code
- Update all documentation

--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -5,7 +5,7 @@ WINIT_X11_SCALE_FACTOR = "1"
 [window]
 dynamic_padding = true
 decorations = "full"
-title = "Alacritty@CachyOS"
+title = "Alacritty"
 opacity = 1.0
 decorations_theme_variant = "Dark"
 
@@ -52,7 +52,7 @@ white = "0xECEFF4"
 size = 12
 
 [font.normal]
-family = "monospace"
+family = "JetBrainsMono Nerd Font"
 style = "Regular"
 
 [font.bold]
