--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -62,7 +62,7 @@ set -g mouse on
 # ============================================================================
 
 # Reload config
-bind r source-file ~/.dotfiles/config/tmux/tmux.conf \; display "Config reloaded"
+bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded"
 bind ? list-keys -T "Keybindings"
 
 # Pane navigation (vim-style)
