--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -36,7 +36,8 @@ set -g status-right-length 150
 
 # CPU/Memory monitor (no colors - matches theme)
 # Lock status indicator: UNLOCKED (subtle green) / LOCKED (muted red)
-set -g status-right "#[fg=#a8a8a8]#($HOME/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 1) #[fg=#a8a8a8] %H:%M #[default]#{?@keylocker-status,#[fg=#e0e0e0]#[bg=#706060] LOCKED ,#[fg=#e0e0e0]#[bg=#607060] UNLOCKED }"
+# CPU/mem hidden when terminal width < 100 columns
+set -g status-right "#[fg=#a8a8a8]#($HOME/.config/tmux/scripts/status-responsive.sh) #[fg=#a8a8a8] %H:%M #[default]#{?@keylocker-status,#[fg=#e0e0e0]#[bg=#706060] LOCKED ,#[fg=#e0e0e0]#[bg=#607060] UNLOCKED }"
 
 # Window status styling
 setw -g window-status-format ' #I:#W '
