--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -56,15 +56,15 @@ family = "JetBrainsMono Nerd Font"
 style = "Regular"
 
 [font.bold]
-family = "monospace"
+family = "JetBrainsMono Nerd Font"
 style = "Bold"
 
 [font.italic]
-family = "monospace"
+family = "JetBrainsMono Nerd Font"
 style = "Italic"
 
 [font.bold_italic]
-family = "monospace"
+family = "JetBrainsMono Nerd Font"
 style = "Bold Italic"
 
 [selection]
